# ChemistryExtract

./: .gitignore  categorisation.py  doc_parser.ipynb  extractor.py  log.txt  main.py  out.md  out.txt  processor.py  pyproject.toml  requirements.txt  summariser.py  test1.ipynb  tests.py
Data/: document.html
Data/document_files/: 3LBZJ4KXKBF2PJ46QCMT3X  ServiceGetConfig  aframe.html  contextualScaffold.js.download  display.js.download  f(1).txt  f.txt  hotjar-3120009.js.download  js  js(1)  js(2)  load.js.download  maze-universal-loader.js.download  modules.c7cfa5e5dff97bece8fc.js.download  osano.js.download  rj2hj2w2zc  roundtrip.js.download  satellite.98dce3a3.js.download  saved_resource(1).html  saved_resource(6).html  saved_resource(7).html  saved_resource(8).html  saved_resource.html
src/chemstractor/: models.py
src/chemstractor/commands/: categorise.py  extract.py  main.py  metadata.py  process.py  process_all.py  report.py  summarise.py  test_all.py  tests.py  validate.py  validate_all.py
src/chemstractor/lib/: categorisation.py  extractor.py  metadata.py  processor.py  report.py  summariser.py
test1/categorisation/: table1.json
test1/extract/: output.md
test1/extract/tables/csv/: table1.csv
test1/extract/tables/txt/: table1.txt
test1/summary/: summary.json  test1_summary.xlsx
tests/runs/2026-06-23_16-37-59/output/: test1.md  test2.md
tests/validation/test1/summary/: table1.json
tests/validation/test2/summary/: summary.json
tests/validation/test3/categorisation/: table1.json  table2.json
tests/validation/test3/summary/: table1.json
(+3 files in other folders)
