[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "chemstractor"
version = "0.1.0"
dependencies = [
    "click",
    "docling",
    "google-genai",
    "inquirer",
    "ollama",
    "openpyxl",
    "pydantic",
    "pymupdf",
    "python-dotenv",
    "rich",
    "onnxruntime"
]